⏲🍥 Checkpoint ./index.html:9625737/2635 ./script.js:9625737/287 ./TODO.md:9625737/139 ./style.css:9625737/178

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body {
   margin: 0;
   background-color: black;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+}
+
+canvas {
+  image-rendering: pixelated; 
+  width: 100%;
 }
