--- a/style.css
+++ b/style.css
@@ -5,7 +5,17 @@ body {
   width: 100vw;
 }
 
-canvas {
-  image-rendering: pixelated; 
-  width: 100%;
+#canvaswrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
+
+#canvaswrapper canvas {
+  image-rendering: pixelated;
+  /* Width and height controlled by JS to letterbox in the #canvaswrapper */
+  margin: auto;
 }
